--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <!-- navbar -->
-    <div class="p-5 flex justify-between items-center ">
+    <div class="p-5 flex justify-between items-center relative ">
         <h1 class="text-3xl font-extrabold ">Nostra</h1>
         <div class="flex gap-20 mr-20 font-semibold text-xl">
             <p>Home</p>
@@ -24,36 +24,34 @@
         </div>
     </div>
     <!-- Image section -->
-    <div class="p-5 relative ">
+    <div class="p-5 flex justify-center ">
         <img src="./img/img1.jpg" alt="img" style="height:800px;width:100%;opacity: 0.5;">
-    </div>
-    <div class="flex justify-center">
-    <div class="absolute top-96 left-1/3">    
-<div class=" flex justify-center">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3.5" stroke="currentColor"
-            class="w-36 h-24  " >
-            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
-        </svg>  
-        <div class=" text-center  top-1/4 " >
-            <h1 class="font-extrabold text-4xl ">Level up your Style with our</h1>
-            <p class="font-extrabold">Summer Collections</p>
-            <button class="border border-black text-black p-3 items-center" style="width: fit-content;">ShopNow-></button>
+        <div class=" flex justify-center absolute top-96 right-1/3 ">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3.5"
+                stroke="currentColor" class="w-36 h-24  ">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+            </svg>
+            <div class=" text-center  top-1/4 ">
+                <h1 class="font-extrabold text-4xl ">Level up your Style with our</h1>
+                <p class="font-extrabold">Summer Collections</p>
+                <button class="border border-black text-black p-3 items-center"
+                    style="width: fit-content;">ShopNow-></button>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3.5"
+                stroke="currentColor" class="w-36 h-24">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+            </svg>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="3.5" stroke="currentColor"
-            class="w-36 h-24" >
-            <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
-        </svg> 
+
     </div>
-    
-</div>    
-    </div>
-    
+
+
 
     <!-- Brand section -->
     <div class="p-5 ">
         <h1 class="font-extrabold text-4xl">Brands</h1>
         <div class="mt-6">
-            <img src="./img/adidas.svg" alt="" style="height: 80px;width: 80px;" >
+            <img src="./img/adidas.svg" alt="" style="height: 80px;width: 80px;">
             <P class="font-black text-justify">Addidas</P>
         </div>
     </div>
