contact pg and collection page updated

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <p class="hover:underline">Home</p>
             <p class="hover:underline" id="newarrivalbutton" >New Arrival</p>
             <p class="hover:underline" id="mostwantedbutton">Most Wanted</p>
-            <p class="hover:underline">Collections</p>
-            <p class="hover:underline">Contact us</p>
+            <p class="hover:underline"><a href="Collections.html">Collections</a></p>
+            <p class="hover:underline"> <a href="Contactform.html">Contact us</a></p>
         </div>
     </div>
     <!-- Image section -->
@@ -178,7 +178,7 @@
    <div class="flex justify-center" id="mostwantedcontainer">
 <div  >
     <h1 class="font-extrabold text-4xl" >Most Wanted</h1>
-    <div class="flex gap-8 p-5 " >
+    <div class="flex gap-8 p-5 mt-3 " >
     
     <div style="position: relative;">
         <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
