--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 
 
    <!-- Most Wanted -->
-   <div class="flex justify-center" id="mostwantedcontainer">
+   <div class="flex justify-center" id="mostwantedcontainer"  >
 <div  >
     <h1 class="font-extrabold text-4xl" >Most Wanted</h1>
-    <div class="flex gap-8 p-5 mt-3 " >
+    <div class="flex gap-8 p-5 mt-3 " id="items-container" style="overflow-x:auto; "  >
     
     <div style="position: relative;">
         <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
@@ -192,15 +192,45 @@
         <img src="./img/blackheart.png" alt="" style="width: 40px;bottom:10px; right: 10px;" class="absolute ">
     </div>
     <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
+        <img src="./img/n8.jpg" alt="" style="width: 300px; height: 300px;">
+        <img src="./img/blackheart.png" alt="" style="width: 40px; position: absolute; bottom: 10px; right: 10px;">
+    </div>
+    <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
+        <img src="./img/f1.jpg" alt="" style="width: 300px; height: 300px;">
+        <img src="./img/blackheart.png" alt="" style="width: 40px; position: absolute; bottom: 10px; right: 10px;">
+    </div>
+    <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
+        <img src="./img/n8.jpg" alt="" style="width: 300px; height: 300px;">
+        <img src="./img/blackheart.png" alt="" style="width: 40px; position: absolute; bottom: 10px; right: 10px;">
+    </div>
+    <!-- <div style="position: relative;">
         <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center;border-radius: 5px;">Sale</p>
         <img src="./img/n4.jpg" alt="" style="width: 300px; height: 300px;">
         <img src="./img/blackheart.png" alt="" style="width: 40px; bottom:10px; right: 10px;" class="absolute ">
     </div>
     <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center; border-radius: 5px;">Sale</p>
+        <img src="./img/n8.jpg" alt="" style="width: 300px; height: 300px;">
+        <img src="./img/blackheart.png" alt="" style="width: 40px; position: absolute; bottom: 10px; right: 10px;">
+    </div> -->
+    <!-- <div style="position: relative;">
         <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center;border-radius: 5px;">Sale</p>
         <img src="./img/f7.jpg" alt="" style="width: 300px; height: 300px;" >
         <img src="./img/blackheart.png" alt="" style="width: 40px;bottom:10px; right: 10px;" class="absolute ">
     </div>
+    <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center;border-radius: 5px;">Sale</p>
+        <img src="./img/f1.jpg" alt="" style="width: 300px; height: 300px;">
+        <img src="./img/blackheart.png" alt="" style="width: 40px;bottom:10px; right: 10px;" class="absolute ">
+    </div>
+    <div style="position: relative;">
+        <p class="bg-red-600 p-1 absolute text-white" style="width: 50px; text-align: center;border-radius: 5px;">Sale</p>
+        <img src="./img/f7.jpg" alt="" style="width: 300px; height: 300px;" >
+        <img src="./img/blackheart.png" alt="" style="width: 40px;bottom:10px; right: 10px;" class="absolute ">
+    </div>  -->
 </div>
 </div>
 </div>
@@ -208,10 +238,10 @@
 <div class="flex justify-center">
 <div class="flex " style="background-color: black;">
     <div>
-        <img src="./img/offer.jpg" alt="" style="width:700px ;padding: 30px;">
+        <img src="./img/offer.jpg" alt="" style="width:800px ;padding: 30px;">
     </div>
     <div class=" flex justify-center items-center">
-        <div class="text-white ">
+        <div class="text-white p-3 ">
         <h2 class="font-extrabold text-4xl mb-3">Limited Offer</h2>
         <h4 class=" font-extrabold text-3xl mb-3">35% OFF on this for the first 30 Customers</h4>
         <button class="bg-white p-2 text-black" style="border-radius: 10px;">ShopNow &#x2192;</button>
