collection page checkbox updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <!-- Image section -->
-<div class="p-5 flex justify-center relative">
+<div class="p-5 flex justify-center relative" style="width: 100%;">
     <div class="slider">
     <img src="./img/img1.jpg" alt="img" style="height:800px;width:100%;opacity: 0.5;">
     <img src="./img/sli-2.jpg" alt="" style="height:800px;width:100%;opacity: 0.5;display: none;" >
