--- a/Collections.html
+++ b/Collections.html
@@ -23,13 +23,13 @@
     </div>
 
   <!-- sec-1 -->
-    <div class="grid grid-cols-2">
+    <div class="grid grid-cols-2" id="collcontainer">
       <div class="ml-20">
 <h1 class="font-bold text-4xl p-6 mt-10 -ml-6">Occasion</h1>
 <div class="p-6 text-3xl " >
-<input type="checkbox" name="" id="" class="mb-2"> Summer <br>
-<input type="checkbox" name="" id="" class="mb-2"> Party <br>
-<input type="checkbox" name="" id="" class="mb-2"> Beach  <br>
+<input type="checkbox" name="occasion" id="summer" class="mb-2" onchange="filterImages()"> Summer <br>
+<input type="checkbox" name="occasion" id="party" class="mb-2"onchange="filterImages()"> Party <br>
+<input type="checkbox" name="occasion" id="beach" class="mb-2"onchange="filterImages()"> Beach  <br>
 </div>
 <div>
   <h1 class="font-bold text-4xl p-6 mt-10  -ml-6">Colors</h1>
@@ -53,16 +53,16 @@
 <input type="text" name="" id="" placeholder="search" style="width: 90%;margin-bottom: 20px; padding: 10px;
 border: solid black 2px; border-radius: 10px;">
 
-<div class="grid grid-rows-3 grid-cols-3 rounded-xl mb-3 ">
+<div class="grid grid-rows-3 grid-cols-3 rounded-xl mb-3 " id="clothingGrid">
 <div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹230</p></div>
 <div><img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"> <h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl"> Summer Green</h2><p>₹260</p></div>
+<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl"> Beach Shirt</h2><p>₹260</p></div>
 <div><img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
 <div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Summer Green</h2><p>₹260</p></div>
+<div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
 <div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
 <div> <img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Summer Green</h2><p>₹260</p></div>
+<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
   <div> <img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
   <div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
   <div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹260</p></div>
@@ -101,6 +101,8 @@ border: solid black 2px; border-radius: 10px;">
     </div>
     <p>@ 2023 Greenden.com</p>
   </div>
-  </section>      
+  </section>   
+  
+  <script src="collections.js"></script>
 </body>
 </html>
