responsive design made

--- a/Collections.html
+++ b/Collections.html
@@ -13,13 +13,30 @@
     <!-- navbar -->
     <div class="p-5 flex justify-between items-center sticky top-0 z-20 bg-white">
         <h1 class="text-3xl font-extrabold ">Nostra</h1>
-        <div class="flex gap-20 mr-20 font-semibold text-xl  cursor-pointer">
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 lg:hidden">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+        </svg>
+        <div class="flex gap-20 mr-20 font-semibold text-xl  cursor-pointer sm:hidden lg:flex ">
             <p class="hover:underline"><a href="index.html">Home</a></p>
             <p class="hover:underline" id="newarrivalbutton" >New Arrival</p>
             <p class="hover:underline" id="mostwantedbutton">Most Wanted</p>
             <p class="hover:underline"><a href="Collections.html">Collections</a></p>
             <p class="hover:underline"> <a href="Contactform.html">Contact us</a></p>
         </div>
+    </div>
+     <!-- sidebar -->
+  <div id="sidebar"class="bg-gray-200  fixed  top-0 left-0 z-20 " style="width:50%;height:100vh;right:-50%;transition: all;transition-duration:1000;">
+    <div class="text-right p-10">
+      <p id="closex"class="inline cursor-pointer" >X</p>
+    </div>
+  <ul class="flex flex-col gap-10 items-center text-xl  lg:flex">
+    <li><a class=" hover:underline" href="index.html">Home</a></li>
+    <li><a class="hover:underline" id="newarrivalbutton" >New Arrival</a></li>
+    <li><a class="hover:underline" id="mostwantedbutton">Most Wanted</a></li>
+    <li><a class="hover:underline" href="Collections.html">Collections</a></li>
+    <li><a class="hover:underline" href="Contactform.html">Contact us</a></li>
+  </ul>
+</div>
     </div>
 
   <!-- sec-1 -->
