responsive design made

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <div class="text-right p-10">
       <p id="closex"class="inline cursor-pointer" >X</p>
     </div>
-  <ul class="flex flex-col gap-10 items-center text-xl  lg:flex">
-    <li><a class=" hover:underline" href="index.html">Home</a></li>
-    <li><a class="hover:underline" id="newarrivalbutton" >New Arrival</a></li>
-    <li><a class="hover:underline" id="mostwantedbutton">Most Wanted</a></li>
-    <li><a class="hover:underline" href="Collections.html">Collections</a></li>
-    <li><a class="hover:underline" href="Contactform.html">Contact us</a></li>
-  </ul>
+  <div class="flex flex-col gap-10 items-center text-xl  lg:flex cursor-pointer">
+    <p class=" hover:underline"> <a href="index.html">Home</a></p>
+    <p class="hover:underline" id="newarrivalbutton" >New Arrival</p>
+    <p class="hover:underline " id="mostwantedbutton">Most Wanted</p>
+     <p class="hover:underline"><a href="Collections.html">Collections</a></p>
+    <p class="hover:underline" ><a  href="Contactform.html">Contact us</a></p>
+</div>
 </div>
     </div>
     <!-- Image section -->
