--- a/Collections.html
+++ b/Collections.html
@@ -39,55 +39,54 @@
 </div>
     </div>
 
-  <!-- sec-1 -->
-    <div class="grid grid-cols-2" id="collcontainer">
-      <div class="ml-20">
-<h1 class="font-bold text-4xl p-6 mt-10 -ml-6">Occasion</h1>
-<div class="p-6 text-3xl " >
-<input type="checkbox" name="occasion" id="summer" class="mb-2" onchange="filterImages()"> Summer <br>
-<input type="checkbox" name="occasion" id="party" class="mb-2"onchange="filterImages()"> Party <br>
-<input type="checkbox" name="occasion" id="beach" class="mb-2"onchange="filterImages()"> Beach  <br>
-</div>
-<div>
-  <h1 class="font-bold text-4xl p-6 mt-10  -ml-6">Colors</h1>
-  <div class="p-6 text-3xl " >
-    <input type="checkbox" name="" id="" class="mb-2"> Red <br>
-    <input type="checkbox" name="" id="" class="mb-2"> Blue<br>
-    <input type="checkbox" name="" id="" class="mb-2"> White <br>
-    <input type="checkbox" name="" id="" class="mb-2"> Green  <br>
-    </div>
-</div>
-<div>
-  <h1 class="font-bold text-4xl p-6 mt-10  -ml-6">Arrivals</h1>
-  <div class="p-6 text-3xl " >
-    <input type="checkbox" name="" id="" class="mb-2"> New <br>
-    <input type="checkbox" name="" id="" class="mb-2"> Old<br>
-    
-    </div>
-</div>
-      </div>
-      <div style="margin-left: -50%;">
-<input type="text" name="" id="" placeholder="search" style="width: 90%;margin-bottom: 20px; padding: 10px;
-border: solid black 2px; border-radius: 10px;">
+ 
+  
 
-<div class="grid grid-rows-3 grid-cols-3 rounded-xl mb-3 " id="clothingGrid">
-<div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹230</p></div>
-<div><img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"> <h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl"> Beach Shirt</h2><p>₹260</p></div>
-<div><img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
-<div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
-<div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
-<div> <img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-<div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
-  <div> <img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
-  <div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
-  <div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹260</p></div>
-   
+    <!-- Occasion section -->
+<div class="grid sm:grid-cols-2" id="collcontainer">
+  <div class="ml-5 sm:ml-0"> <!-- Adjusted margin for smaller screens -->
+      <h1 class="font-bold text-4xl p-6 mt-10 sm:mt-0">Occasion</h1> <!-- Adjusted margin for smaller screens -->
+      <div class="p-6 text-3xl">
+          <input type="checkbox" name="occasion" id="summer" class="mb-2" onchange="filterImages()"> Summer <br>
+          <input type="checkbox" name="occasion" id="party" class="mb-2" onchange="filterImages()"> Party <br>
+          <input type="checkbox" name="occasion" id="beach" class="mb-2" onchange="filterImages()"> Beach  <br>
+      </div>
+      <div>
+          <h1 class="font-bold text-4xl p-6 mt-10 sm:mt-0">Colors</h1> <!-- Adjusted margin for smaller screens -->
+          <div class="p-6 text-3xl">
+              <input type="checkbox" name="" id="" class="mb-2"> Red <br>
+              <input type="checkbox" name="" id="" class="mb-2"> Blue<br>
+              <input type="checkbox" name="" id="" class="mb-2"> White <br>
+              <input type="checkbox" name="" id="" class="mb-2"> Green  <br>
+          </div>
+      </div>
+      <div>
+          <h1 class="font-bold text-4xl p-6 mt-10 sm:mt-0">Arrivals</h1> <!-- Adjusted margin for smaller screens -->
+          <div class="p-6 text-3xl">
+              <input type="checkbox" name="" id="" class="mb-2"> New <br>
+              <input type="checkbox" name="" id="" class="mb-2"> Old<br>
+          </div>
+      </div>
+  </div>
+  <div class="ml-5 sm:ml-0">
+      <input type="text" name="" id="" placeholder="search" class="w-full mb-5 sm:w-full sm:mb-10 p-4 lg:-ml-40 border border-black rounded-xl"> <!-- Adjusted width and margin for smaller screens -->
+      <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 lg:-ml-96" id="clothingGrid">
+        <div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹230</p></div>
+        <div><img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"> <h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
+        <div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl"> Beach Shirt</h2><p>₹260</p></div>
+        <div><img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
+        <div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
+        <div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
+        <div><img src="./img/f1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
+        <div> <img src="./img/f7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
+        <div><img src="./img/n1.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Beach Shirt</h2><p>₹260</p></div>
+          <div> <img src="./img/n4.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Party Floral Shirt</h2><p>₹230</p></div>
+          <div><img src="./img/n7.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Floral Summer Shirt</h2><p>₹290</p></div>
+          <div><img src="./img/n8.jpg" alt="" style="width: 300px;height: 300px;"><h2 class="font-bold text-2xl">Soild party Shirt</h2><p>₹260</p></div>
+      </div>
+  </div>
 </div>
-      
-    </div>
-    </div>
+
 
 
      <!-- footer section -->
